// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Management: User tab Loads user list and not users are found 1`] = `
<body>
  <div>
    <div
      aria-description="Available user roles"
      class="margin-x-3 margin-y-4 grid-row flex-row flex-no-wrap flex-justify"
    >
      <p
        class="grid-col-4"
      >
        <span
          class="text-bold"
        >
          Super Admin:
        </span>
         Manage user permissions; create and manage user groups; view audit logs; configure FHIR servers; create, assign, and run queries
      </p>
      <p
        class="grid-col-4"
      >
        <span
          class="text-bold"
        >
          Admin:
        </span>
         Create, assign, and run queries
      </p>
      <p
        class="grid-col-3"
      >
        <span
          class="text-bold"
        >
          Standard:
        </span>
         Only run queries
      </p>
    </div>
    <div
      class="customizeTableWrapper"
    >
      <table
        class="usa-table usa-table--borderless customizeTable"
        data-testid="table"
      >
        <thead>
          <tr>
            <th>
              Name
            </th>
            <th>
              Permissions
            </th>
            <th>
              User groups
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              colspan="3"
            >
              No users found
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;

exports[`User Management: User tab Loads user list successfully 1`] = `
<body>
  <div>
    <div
      aria-description="Available user roles"
      class="margin-x-3 margin-y-4 grid-row flex-row flex-no-wrap flex-justify"
    >
      <p
        class="grid-col-4"
      >
        <span
          class="text-bold"
        >
          Super Admin:
        </span>
         Manage user permissions; create and manage user groups; view audit logs; configure FHIR servers; create, assign, and run queries
      </p>
      <p
        class="grid-col-4"
      >
        <span
          class="text-bold"
        >
          Admin:
        </span>
         Create, assign, and run queries
      </p>
      <p
        class="grid-col-3"
      >
        <span
          class="text-bold"
        >
          Standard:
        </span>
         Only run queries
      </p>
    </div>
    <div
      class="customizeTableWrapper"
    >
      <table
        class="usa-table usa-table--borderless customizeTable"
        data-testid="table"
      >
        <thead>
          <tr>
            <th>
              Name
            </th>
            <th>
              Permissions
            </th>
            <th>
              User groups
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              potter, harry
            </td>
            <td
              width="270"
            >
              <label
                class="usa-label usa-sr-only"
                data-testid="label"
                for="role-select-123"
              >
                User role
              </label>
              <select
                class="usa-select"
                id="role-select-123"
              >
                <option
                  value="Super Admin"
                >
                  Super Admin
                </option>
                <option
                  selected=""
                  value="Admin"
                >
                  Admin
                </option>
                <option
                  value="Standard User"
                >
                  Standard
                </option>
              </select>
            </td>
            <td>
              --
            </td>
          </tr>
          <tr>
            <td>
              potter, lily
            </td>
            <td
              width="270"
            >
              <label
                class="usa-label usa-sr-only"
                data-testid="label"
                for="role-select-456"
              >
                User role
              </label>
              <select
                class="usa-select"
                id="role-select-456"
              >
                <option
                  value="Super Admin"
                >
                  Super Admin
                </option>
                <option
                  selected=""
                  value="Admin"
                >
                  Admin
                </option>
                <option
                  value="Standard User"
                >
                  Standard
                </option>
              </select>
            </td>
            <td>
              <button
                aria-description="Edit Team 1 members"
                class="usa-button usa-button--unstyled margin-right-2 text-no-underline"
                data-testid="button"
                type="button"
              >
                Team 1
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;
